Update Dota 2 Web Application.html

--- a/Dota 2 Web Application.html
+++ b/Dota 2 Web Application.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="dota2.jpg">
+        <img class="logo" src="https://raw.githubusercontent.com/Wirosablengs/Progate-JS-Bootcampt-Final-Project/main/dota2.jpg">
     </header>
     <section id="main">
         <div class = "container">
